@@ -2865,7 +2865,7 @@ static gboolean monster_breath_hit(const GList *traj,
 
         /* erode the monster's inventory */
         if (iet && monster_inv(m))
-            inv_erode(monster_inv(m), iet, FALSE);
+            inv_erode(monster_inv(m), iet, FALSE, NULL);
 
         monster_damage_take(m, damage_copy(dam));
 
@@ -2895,7 +2895,15 @@ static gboolean monster_breath_hit(const GList *traj,
 
             /* erode the player's inventory */
             if (iet != IET_NONE)
-                inv_erode(&nlarn->p->inventory, iet, TRUE);
+            {
+                /*
+                 * Filter equipped and exposed items, e.g.
+                 * a body armour will not be affected by erosion
+                 * when the player wears a cloak over it.
+                 */
+                inv_erode(&nlarn->p->inventory, iet, TRUE,
+                        player_item_filter_unequippable);
+            }
 
             terminated = TRUE;
         }
@@ -2904,7 +2912,7 @@ static gboolean monster_breath_hit(const GList *traj,
     if (iet > IET_NONE && map_ilist_at(mp, pos))
     {
         /* erode affected items */
-        inv_erode(map_ilist_at(mp, pos), iet, fov_get(nlarn->p->fv, pos));
+        inv_erode(map_ilist_at(mp, pos), iet, fov_get(nlarn->p->fv, pos), NULL);
     }
 
 
